--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,9 @@
 	<head>
 		<title>Online Chat Room</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
-		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
+		<script src="jquery.cookie.js"></script>
 		<script src="login.js"></script>
 	</head>
 
