--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -6,7 +6,7 @@
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="jquery.cookie.js"></script>
 	</head>
-	<body>
+	<body  id = "window_panel">
 		<div id = "panel">
 			<div id = "board"></div>
 			<div id = "chatPanel">
